syntax = "proto3";

package yandex.cloud.events.iam.credential;

import "google/protobuf/timestamp.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/validation.proto";
import "yandex/cloud/events/options.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/iam/credential;iam";
option java_package = "yandex.cloud.api.events.iam.credential";
option java_outer_classname = "CommonCredentialEvents";

message IamCredentialEventMetadata {
    string event_id = 1 [(required) = true];
    string event_type = 2 [(required) = true];
    google.protobuf.Timestamp created_at = 3 [(required) = true];
    TracingContext tracing_context = 4 [(hide) = true];
    string cloud_id = 5;
    string folder_id = 6;
}

message MaskedPassportCookies {
    string masked_session_id = 1 [(required) = true];
    string masked_ssl_session_id = 2;
    string host = 3 [(required) = true];
}

// OAuth request
message OAuthRequest {
    // client_id
    string client_id = 1 [(required) = true];
    repeated string scopes = 3;
}
